--- a/css/style.css
+++ b/css/style.css
@@ -1514,6 +1514,10 @@ footer .footer__box .social .fa-dribbble {
   .blog__container {
     padding: 10px;
   }
+  .blog__container .blog__container--top, .blog__container .blog__container--middle, .blog__container .blog__container--bottom {
+    margin: 0 auto;
+    max-width: 250px;
+  }
   .getquote .flex-wrapper {
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
@@ -1554,6 +1558,9 @@ footer .footer__box .social .fa-dribbble {
   form input[type="submit"] {
     background: #FF503F;
   }
+  form input[type="submit"]:hover {
+    background: #d81300;
+  }
   nav.nav__menu {
     width: 100%;
     height: 100%;
@@ -1572,5 +1579,27 @@ footer .footer__box .social .fa-dribbble {
         -ms-flex: 1 1 auto;
             flex: 1 1 auto;
     margin: 2% auto;
+  }
+  .modal-content {
+    margin-top: 25%;
+    padding: 25px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-height: 417px) {
+  nav.nav__menu {
+    width: 50%;
+    height: 100%;
+    background: rgba(4, 14, 24, 0.9);
+  }
+  nav.nav__menu ul {
+    width: 20%;
+  }
+  nav.nav__menu img {
+    display: none;
+  }
+  nav.nav__menu a.close {
+    font-size: 2rem;
   }
 }
